# deadbranch

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  install.sh  release-please-config.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-please.yml  release.yml
demo/: README.md
demo/tapes/: backup.tape  clean.tape  config.tape  interactive.tape  list.tape  settings.tape  setup.sh  snap.tape  stats.tape
man/: deadbranch.1
pkg/homebrew/: deadbranch.rb
pkg/npm/: README.md  package.json
pkg/npm/scripts/: install.js
src/: backup.rs  branch.rs  cli.rs  config.rs  error.rs  git.rs  main.rs  stats.rs  ui.rs
src/tui/: app.rs  event.rs  mod.rs  particles.rs  render.rs  snap.rs
tests/: backup_tests.rs  cli_tests.rs  edge_case_tests.rs
